[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralTween" type="Tween" parent="."]

[node name="PauseBack" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeftPanel" type="Control" parent="."]
anchor_right = 0.25
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBack" type="ColorRect" parent="LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.415686, 0.415686, 0.415686, 0.498039 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="LeftPanel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="ResumeButton" type="Button" parent="LeftPanel/MainContainer"]
margin_right = 204.0
margin_bottom = 20.0
text = "Resume"

[node name="SaveButton" type="Button" parent="LeftPanel/MainContainer"]
margin_top = 24.0
margin_right = 204.0
margin_bottom = 44.0
text = "Save"

[node name="OptionsButton" type="Button" parent="LeftPanel/MainContainer"]
margin_top = 48.0
margin_right = 204.0
margin_bottom = 68.0
text = "Options"

[node name="MenuButton" type="Button" parent="LeftPanel/MainContainer"]
margin_top = 72.0
margin_right = 204.0
margin_bottom = 92.0
text = "Main Menu"

[node name="Popups" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelBack" type="ColorRect" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_lock_": true
}

[node name="CloseButton" type="Button" parent="Popups"]
margin_right = 12.0
margin_bottom = 20.0
text = "Close"

[node name="OptionsContainer" type="Control" parent="Popups"]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_right = 40.0
margin_bottom = 40.0

[node name="OptionsMenu" parent="Popups/OptionsContainer" instance=ExtResource( 2 )]

[connection signal="pressed" from="LeftPanel/MainContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="LeftPanel/MainContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="LeftPanel/MainContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="LeftPanel/MainContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Popups/CloseButton" to="." method="_on_CloseButton_pressed"]
